--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-slick": "^0.23.13",
+    "carousel": "^0.0.3",
     "clsx": "^2.1.0",
+    "lucide-react": "^0.334.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
+    "slick": "^1.12.2",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
