--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "@types/react-slick": "^0.23.13",
     "carousel": "^0.0.3",
     "clsx": "^2.1.0",
     "lucide-react": "^0.334.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.0",
     "react-slick": "^0.30.2",
+    "redux-persist": "^6.0.0",
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.2.1"
